--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "flowbite-react": "^0.7.3",
     "next": "13.4.0",
+    "nodemailer": "^6.9.12",
     "react": "18",
     "react-dom": "18",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18",
     "@types/react-dom": "18",
     "autoprefixer": "10",
